(WIP) uefi: add SBAT metadata to the fwupd EFI binary
The Secure Boot Advanced Targeting (SBAT) [0] is a Generation Number Based
Revocation mechanism that is meant to replace the DBX revocation file list.

Binaries must contain a .sbat data section that has a set entries, each of
them consisting of UTF-8 strings as comma separated values. Allow to embed
this information into the fwupd EFI binary at build time.

The SBAT metadata must contain at least two entries. One that defines the
SBAT version used and another one that defines the component generation.

Downstream users can add additional entries if have changes that make them
diverge from the upstream code and potentially add other vulnerabilities.

These additional entries can be added by including a CSV file in the data
directory. The generate_binary.py script will read the file and append the
entries when writing the SBAT metadata.

[0]: https://github.com/rhboot/shim/blob/sbat/SBAT.md

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -44,3 +44,5 @@ option('efi-ldsdir', type : 'string', description : 'path to the EFI lds directo
 option('efi-includedir', type : 'string', value : '/usr/include/efi', description : 'path to the EFI header directory')
 option('efi_os_dir', type: 'string', description : 'the name of OS directory in ESP')
 option('link_language', type : 'string', value : 'c', description : 'the linker to use for targets [c, cpp]')
+option('sbat_version', type : 'string', value : '0', description : 'SBAT data version')
+option('sbat_component_generation', type : 'string', value : '0', description : 'SBAT component generation')
