--- a/contrib/PKGBUILD
+++ b/contrib/PKGBUILD
@@ -19,7 +19,12 @@ build() {
     if [ -n "$CI" ]; then
         export CI="--wrap-mode=default"
     fi
-    arch-meson -D b_lto=false $CI ../build
+    arch-meson -D b_lto=false $CI ../build \
+        -Defi_os_dir="arch" \
+        -Defi_sbat_distro_summary="Arch Linux" \
+        -Defi_sbat_distro_pkgname="${pkgname}" \
+        -Defi_sbat_distro_version="$(pkgver)" \
+        -Defi_sbat_distro_url="https://archlinux.org/packages/community/x86_64/${pkgname}/"
 
     ninja -v -C ../build
 }
