uefi-capsule: Add SBAT metadata to the fwupd EFI binary
The Secure Boot Advanced Targeting (SBAT) [0] is a Generation Number Based
Revocation mechanism that is meant to replace the DBX revocation file list.

Binaries must contain a .sbat data section that has a set entries, each of
them consisting of UTF-8 strings as comma separated values. Allow to embed
this information into the fwupd EFI binary at build time.

The SBAT metadata must contain at least two entries. One that defines the
SBAT version used and another one that defines the component generation.

Downstream users can add additional entries if have changes that make them
diverge from the upstream code and potentially add other vulnerabilities.

[0]: https://github.com/rhboot/shim/blob/sbat/SBAT.md

--

Backported from 378b00018b42bdaefe50e70fa546065a41ee0e42 with the following
modifications:
 - No support for supported build
 - Plugin did not rename yet
 - Update debian/rules for newer CONFARGS building from master
 - Include TPM plugin in fedora

--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -176,6 +176,12 @@ Data files for installed tests.
     -Dplugin_uefi=true \
     -Dplugin_nvme=true \
     -Dplugin_tpm=true \
+    -Defi_os_dir="fedora" \
+    -Defi_sbat_distro_summary="The Fedora Project" \
+    -Defi_sbat_distro_pkgname="%{name}" \
+    -Defi_sbat_distro_version="%{version}" \
+    -Defi_sbat_distro_url="https://src.fedoraproject.org/rpms/%{name}" \
+    -Dtpm=true \
 %else
     -Dplugin_uefi=false \
     -Dplugin_nvme=false \
