--- a/meson_options.txt
+++ b/meson_options.txt
@@ -32,4 +32,9 @@ option('efi-objcopy', type : 'string', value : 'objcopy', description : 'the obj
 option('efi-libdir', type : 'string', description : 'path to the EFI lib directory')
 option('efi-ldsdir', type : 'string', description : 'path to the EFI lds directory')
 option('efi-includedir', type : 'string', value : '/usr/include/efi', description : 'path to the EFI header directory')
-option('efi_os_dir', type: 'string', description : 'the name of OS directory in ESP')
+option('efi_os_dir', type: 'string', description : 'the name of OS directory in ESP, e.g. fedora')
+option('efi_sbat_fwupd_generation', type : 'integer', value : 0, description : 'SBAT fwupd generation')
+option('efi_sbat_distro_summary', type : 'string', value : '', description : 'SBAT distribution summary, e.g. Fedora')
+option('efi_sbat_distro_pkgname', type : 'string', value : '', description : 'SBAT distribution package name, e.g. fwupd')
+option('efi_sbat_distro_version', type : 'string', value : '', description : 'SBAT distribution version, e.g. fwupd-1.5.6.fc33')
+option('efi_sbat_distro_url', type : 'string', value : '', description : 'SBAT distribution URL, e.g. https://src.fedoraproject.org/rpms/fwupd')
